<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGreen"
    tools:context=".GameActivity">

    <TextView
        android:id="@+id/tv_play_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/score"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_question_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_play_score"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/question_count"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_question_count"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/difficulty"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_time_count_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="16dp"
        android:padding="10dp"
        android:text="@string/time_count_down"
        android:textColor="@color/colorPrimary"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/radio_group_key"
        android:layout_centerInParent="true"
        android:layout_marginBottom="32dp"
        android:text="@string/question"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/radio_group_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp">

        <RadioButton
            android:id="@+id/radio_button_key_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:text="@string/demo_key_1"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radio_button_key_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:text="@string/demo_key_2"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radio_button_key_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:text="@string/demo_key_3"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_next_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radio_group_key"
        android:layout_centerVertical="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/custom_button_confirm"
        android:paddingLeft="8dp"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold" />
</RelativeLayout>